--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.kurdej</groupId>
-  <artifactId>testing-jax-rs-jaxb</artifactId>
-  <version>0.0.1</version>
-  <packaging>war</packaging>
-  <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.kurdej</groupId>
+	<artifactId>testing-jax-rs-jaxb</artifactId>
+	<version>0.0.1</version>
+	<packaging>war</packaging>
+	<dependencies>
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
@@ -20,20 +21,25 @@
 			<artifactId>jersey-server</artifactId>
 			<version>1.10</version>
 		</dependency>
-<dependency>
-	<groupId>com.sun.xml.bind</groupId>
-	<artifactId>jaxb-impl</artifactId>
-	<version>2.1.10</version>
-</dependency>
-            
-            <dependency>
-	<groupId>org.codehaus.jackson</groupId>
-	<artifactId>jackson-jaxrs</artifactId>
-	<version>1.9.9</version>
-</dependency>
-            
-  </dependencies>
-  	<build>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.1.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-jaxrs</artifactId>
+			<version>1.9.9</version>
+		</dependency>
+		<dependency>
+			<!-- Gson: Java to Json conversion -->
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.2</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
+	<build>
 		<finalName>services_tests</finalName>
 		<pluginManagement>
 			<plugins>
@@ -61,7 +67,7 @@
 					<packagingExcludes>WEB-INF/lib/javaee-api-6.0.jar</packagingExcludes>
 				</configuration>
 			</plugin>
-			</plugins>
-			</build>
-		
+		</plugins>
+	</build>
+
 </project>
